[tool.poetry]
name = "twostagehdr-ntire21"
version = "0.1.0"
description = ""
authors = ["user <user@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "<2.0"
torch = "^2.4.1"
torchvision = "^0.19.1"
scikit-image = "^0.24.0"
scikit-learn = "^1.5.2"
opencv-python = "^4.10.0.84"
tensorboard = "^2.18.0"
ptflops = "^0.7.4"
etaprogress = "^1.1.1"
torchsummary = "^1.5.1"
matplotlib = "^3.9.2"
imgaug = "^0.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
